--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
 		<div id="app"></div>
 		<div class="stopwatch"></div>
 		<ul class="results"></ul>
-		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.25.0/babel.js"></script>
 		<script src="https://unpkg.com/react@15.3.2/dist/react.js"></script>
 		<script src="https://unpkg.com/react-dom@15.3.2/dist/react-dom.js"></script>
-		<script type="text/babel" src="script.js"></script>
+		<script src="script-compiled.js"></script> 
 	</body>
 </html>
